--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" style="height: 85vh;"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
