fix background color

--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="HandheldFriendly" content="true">
     <title>Vite App</title>
+    <style type="text/css">
+      html { background-color:#fafaf7; }
+    </style>
   </head>
-  <body>
+  <body style="margin:0;">
     <div id="app" style="height: 85vh;"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
