--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       html { background-color:#fafaf7; }
     </style>
   </head>
-  <body style="margin:0;">
+  <body>
     <div id="app" style="height: 85vh;"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
