--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="HandheldFriendly" content="true">
     <meta property="og:url" content="https://water-canvas.netlify.app">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="./src/assets/WaterCanvasOGP.png">
+    <meta property="og:image" content="https://water-canvas.netlify.app/src/assets/WaterCanvasOGP.png">
     <meta property="og:title" content="Water Canvas">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content="./src/assets/WaterCanvasOGP.png">
