--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="HandheldFriendly" content="true">
-    <meta property="og:url" content="https://water-canvas.netlify.app">
+    <meta property="og:url" content="https://water-canvas.netlify.app/ppublic/WaterCanvasOGP.png">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://water-canvas.netlify.app/src/assets/WaterCanvasOGP.png">
+    <meta property="og:image" content="">
     <meta property="og:title" content="Water Canvas">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content="./src/assets/WaterCanvasOGP.png">
