--- a/index.html
+++ b/index.html
@@ -1,28 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#">
+
+<head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#">
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="HandheldFriendly" content="true">
     <meta property="og:url" content="https://water-canvas.netlify.app/public/WaterCanvasOGP.png">
     <meta property="og:type" content="website">
-<<<<<<< HEAD
-    <meta property="og:image" content="">
-=======
     <meta property="og:image" content="https://water-canvas.netlify.app/src/assets/WaterCanvasOGP.png">
->>>>>>> develop
     <meta property="og:title" content="Water Canvas">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content="./src/assets/WaterCanvasOGP.png">
     <meta name="twitter:description" content="Water Canvas">
     <title>Water Canvas</title>
     <style type="text/css">
-      html { background-color:#fafaf7; }
+        html {
+            background-color: #fafaf7;
+        }
     </style>
-  </head>
-  <body>
+</head>
+
+<body>
     <div id="app" style="height: 85vh;"></div>
     <script type="module" src="/src/main.ts"></script>
-  </body>
+</body>
+
 </html>
