--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <meta name="twitter:description" content="Water Canvas">
     <title>Water Canvas</title>
     <style type="text/css">
-      html { background-color:#fafaf7; }
+      html,body { background-color:#fafaf7; margin: 0; }
+
     </style>
   </head>
   <body>
