--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#">
+
+<head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#">
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
@@ -14,12 +15,17 @@
     <meta name="twitter:description" content="Water Canvas">
     <title>Water Canvas</title>
     <style type="text/css">
-      html,body { background-color:#fafaf7; margin: 0; }
-
+        html,
+        body {
+            background-color: #f5f5f5;
+            margin: 0;
+        }
     </style>
-  </head>
-  <body>
+</head>
+
+<body>
     <div id="app" style="height: 100vh;"></div>
     <script type="module" src="/src/main.ts"></script>
-  </body>
+</body>
+
 </html>
