CSSファイル作ったよ

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content="./src/assets/WaterCanvasOGP.png">
     <meta name="twitter:description" content="Water Canvas">
+    <link rel="stylesheet" href="src/Stylesheet/main.css">
     <title>Water Canvas</title>
     <style type="text/css">
-        html,
-        body {
-            background-color: #f5f5f5;
-            margin: 0;
+        html,body {
+          background-color: #f5f5f5;
+          margin: 0;
         }
     </style>
 </head>
