--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content="./src/assets/WaterCanvasOGP.png">
     <meta name="twitter:description" content="Water Canvas">
-    <link rel="stylesheet" href="src/Stylesheet/main.css">
+    <link rel="stylesheet" href="/src/Stylesheet/main.css">
     <title>Water Canvas</title>
     <style type="text/css">
         html,
