--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0,
             maximum-scale=1.0, user-scalable=no" />
     <meta name="HandheldFriendly" content="true">
-    <meta property="og:url" content="https://water-canvas.netlify.app/public/WaterCanvasOGP.png">
+    <meta property="og:url" content="https://water-canvas.netlify.app/WaterCanvasOGP.png">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://water-canvas.netlify.app/src/assets/WaterCanvasOGP.png">
+    <meta property="og:image" content="https://water-canvas.netlify.app/WaterCanvasOGP.png">
     <meta property="og:title" content="Water Canvas">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content="./src/assets/WaterCanvasOGP.png">
+    <meta name="twitter:image" content="https://water-canvas.netlify.app/WaterCanvasOGP.png">
     <meta name="twitter:description" content="Water Canvas">
     <link rel="stylesheet" href="/src/Stylesheet/main.css">
     <title>Water Canvas</title>
